--- a/SysADmin_home.html
+++ b/SysADmin_home.html
@@ -115,6 +115,9 @@
     <a  href="{{ url_for('render_createAcc') }}">
         Create Account
     </a>
+    <a  href="{{ url_for('logout') }}">
+        Logout
+    </a>
     
     
 </div>
