--- a/staff_home.html
+++ b/staff_home.html
@@ -32,11 +32,11 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="{{url_for('StaffHome')}}">Home <span class="sr-only"></span></a>
         <a class="nav-item nav-link" href="{{url_for('create_bid', user_id=session['user_id'])}}">Create Bid</a>
-        <a class="nav-item nav-link" href="#">Search</a>
+        <a class="nav-item nav-link" href="{{url_for('view_profile')}}">Profile</a>
       </div>
     </div>
   </nav>
-
+  
 <h4 style="margin-left: 20px;"><strong>My Current Bids</strong></h4></span>
 <div class="container-fluid">
     <table class="table" id="myTable" >
@@ -78,6 +78,25 @@
             {% endfor %}
         </tbody>
     </table>
+    <form action="{{ url_for('search_workslots') }}" method="GET">
+        <div class="form-group">
+            <label for="query">Search Query:</label>
+            <input type="text" name="query" id="query">
+        </div>
+        <div class="form-group">
+            <label for="status">Status:</label>
+            <select name="status" id="status">
+                <option value="">Any</option>
+                <option value="Available">Available</option>
+                <!-- Add more status options as needed -->
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="date">Date:</label>
+            <input type="date" name="date" id="date">
+        </div>
+        <button type="submit" class="btn btn-primary">Search</button>
+    </form>
 </div>
 
 
