--- a/staff_home.html
+++ b/staff_home.html
@@ -70,7 +70,7 @@
                 </td>
 
                 <td>
-                    <a class="btn btn-danger" href="{{ url_for('delete_bid', id=bid.shift_id) }}">
+                    <a class="btn btn-danger" href="{{ url_for('delete_bid', id=bid.id) }}">
                         Delete
                     </a>
                 </td>
