--- a/manager_home.html
+++ b/manager_home.html
@@ -90,7 +90,7 @@
     <div style="text-align:right;"><a href="{{ url_for('logout') }}" class="link-dark">Logout</a></div>
     <form method="post" action="{{ url_for('search_workslots_manager') }}" class="search-form">
         <div class="search-container">
-            <input type="text" name="search_query" placeholder="Date, Shift Type or Name">
+            <input type="text" name="search_query" placeholder="Date, Status or Name">
             <button type="submit" class="search-button">Search</button>
         </div>
     </form>
@@ -143,7 +143,7 @@
                         <form method="post" action="{{ url_for('reject_approve' , shift_toReject=shift['shift_id'], staff=shift['name']) }}">
                             <button type="submit" name="reject-{{ day }}-{{ loop.index0 }}" class="reject-button">Reject Approved</button>
                         </form>
-                    {% elif shift['status'] == 'Complete (R)' %}
+                    {% elif shift['status'] == 'Incomplete (R)' %}
                         <span style="color: red; font-weight: bold;">Rejected</span>
                     {% endif %}
                 </td>
