--- a/manager_search_results.html
+++ b/manager_search_results.html
@@ -90,7 +90,7 @@
     <div style="text-align:right;"><a href="{{ url_for('logout') }}" class="link-dark">Logout</a></div>
     <form method="post" action="{{ url_for('search_workslots_manager') }}" class="search-form">
         <div class="search-container">
-            <input type="text" name="search_query" placeholder="Date, Shift Type or Name">
+            <input type="text" name="search_query" placeholder="Date, Status or Name">
             <button type="submit" class="search-button">Search</button>
         </div>
     </form>
