--- a/search_results_sysAd.html
+++ b/search_results_sysAd.html
@@ -13,11 +13,11 @@
         padding:10px;
         margin-top:50px;
         margin-left: 465px;
-        width: 350px;
+        width: auto;
         height: 70px;
-        background-color: hsla(19, 87%, 9%, 0.936);
         color:blanchedalmond;
         text-align: center;
+        margin: auto;
     }
 
     #new_account_container {
@@ -25,7 +25,7 @@
         padding-top: 20px;
         margin: 0 auto;
         width: 350px;
-        height: 400px;
+        height: 500px;
         background-color: blanchedalmond;
         color: hsla(19, 87%, 9%, 0.936);
     }
@@ -51,48 +51,57 @@
 
 <nav>
     <div class = "div left-nav">
-        <h2>CaiPeng</h2>
+        <h2>CaiPng</h2>
+    </div>
+    <div class = "middle-nav">
+        <form class = "middle-nav" action="{{ url_for('search_results') }}" method="GET">
+            <input type="text" name="query" placeholder="">
+            <button type="submit">Search</button>
+        </form>
     </div>
     <div class = "right-nav">
         <img src = "{{ url_for('static', filename='styles/icon.jpg')}}" class = "icon">
+        <a href="{{ url_for('logout') }}">
+            <h6>Logout</h6> </a>
     </div>
 </nav>
 
-<form action="{{ url_for('search_results') }}" method="GET">
-    <input type="text" name="query" placeholder="Search...">
-    <button type="submit">Search</button>
-</form>
 
-
-<div id="new_account_container">
-    &nbsp;<br />
+<div id="new_account_header">
     <h1>Search Results for "{{ query }}"</h1>
-    <table >
-        <thead>
-            <tr>
-                <th>Results</th>
-            </tr>
-        </thead>
-    
-        <tbody>
-            {% for result in results %}
-                <tr>
-                    {% for attribute, value in result.__dict__.items() %}
-                        {% if not attribute.startswith('_') %}
-                            <td>{{ attribute }}</td>
-                            <td>{{ value }}</td>
-                        {% endif %}
-                    {% endfor %}
-                </tr>
-            {% endfor %}
-        </tbody>
-    </table>
 </div>
+
+<div class = "container">
+    <div class="min-container">
+        <div class = "right-side">
+            <div class="content">
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Name</th>
+                            <th>Job</th>
+                            <th>Role</th>
+                            <th>Availability</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for result in results %}
+                            <tr>     
+                                <td> {{result['username']}}</td>
+                                <td>{{result['job']}}</td>
+                                <td>{{result['userRole']}}</td>
+                                <td>{{result['avail']}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="container mt-3" align="left">
     
-    <a  href="{{ url_for('logout') }}">
-        Logout
-    </a>
     <a  href="{{ url_for('SysAdminHome') }}">
         Back
     </a>
