--- a/owner_home.html
+++ b/owner_home.html
@@ -18,16 +18,24 @@
 <div class="container-fluid p-5 bg-primary text-white text-center">
     <h1>Cafe Owner Page</h1>
     <p>Cafe Cai Peng</p>
+    <p>Welcome {{ session['user_id'] }}</p>
     <div style="text-align:right;"><a href="{{ url_for('logout') }}" class="link-dark">Logout</a></div>
 </div>
 
-<div class="container mt-3" align="left">
-    
-    <a  href="{{ url_for('render_create_ws') }}">
-        Create Workslot
-    </a>
-    
-  </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="{{url_for('owner_home')}}">Home <span class="sr-only"></span></a>
+        <a class="nav-item nav-link" href="{{ url_for('render_create_ws') }}">Create Workslot</a>
+        <a class="nav-item nav-link" href="{{url_for('view_profile')}}">Profile</a>
+      </div>
+    </div>
+  </nav>
+
 
 <div class="container-fluid">
     <table class="table" id="myTable">
