--- a/staff_create_bids.html
+++ b/staff_create_bids.html
@@ -16,9 +16,9 @@
 {% block body %}
 
 <div class="container-fluid p-5 bg-primary text-white text-center">
-    <h1>Cafe Cai Png</h1>
+    <h1>Cafe CaiPeng</h1>
     <p>Cafe Staff</p>
-    <p>Welcome username</p>
+    <p>Welcome {{ session['user_id'] }}</p>
     <div style="text-align:right;"><a href="{{ url_for('logout') }}" class="link-dark">Logout</a></div>
     
 </div>
@@ -32,7 +32,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="{{ url_for('StaffHome') }}">Home</a>
         <a class="nav-item nav-link active" >Create Bid <span class="sr-only"></span></a>
-        <a class="nav-item nav-link" >Search</a>
+        <a class="nav-item nav-link" href="{{url_for('view_profile')}}">Profile</a>
       </div>
     </div>
   </nav>
